# SunnyWidgets

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  mainwindow.ui
src/: CMakeLists.txt
src/include/: shortcutlineedit.h
src/sources/: shortcutlineedit.cpp  switchbutton.cpp
